<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/filename"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/editNoteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editNoteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hint_enter_notes"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/btnRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFileName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRead"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/read"
        app:icon="@drawable/ic_file_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWrite"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNoteText" />

    <Button
        android:id="@+id/btnWrite"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write"
        app:icon="@drawable/ic_save"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRead"
        app:layout_constraintEnd_toEndOf="@id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnRead" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/delete"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnWrite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnWrite" />

</androidx.constraintlayout.widget.ConstraintLayout>